update photo and form

--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
             <textarea name="message" placeholder="Tell us about your needs…" required></textarea>
           </label>
           <button class="btn" type="submit">Send Message</button>
-          <p class="small muted">Tip: replace <code>your-form-id</code> with your Formspree ID.</p>
+          <!-- <p class="small muted">Tip: replace <code>your-form-id</code> with your Formspree ID.</p>-->
         </form>
       </article>
 
